# rust-ffi-example

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
examples/: macro_usage.rs
lib/: CMakeLists.txt  lib.c  lib.h
src/: bindings.rs  lib.rs
